--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@ table {
   bottom: 100px;
   font-family: 'Cabin Sketch', cursive;
   font-weight: 1000;
-  font-size: 16px;
+  font-size: 20px;
   text-align: center;
   margin:auto;
 }
@@ -46,6 +46,19 @@ table {
   top: 20px
   margin:auto;
   height: 300px;
+  background: -webkit-linear-gradient(#9470B8, #639); 
+  background: -o-linear-gradient(#9470B8, #639); 
+  background: -moz-linear-gradient(#9470B8, #639); 
+  background: linear-gradient(#9470B8, #639); 
+  border-radius: 20px;
+  
+}
+
+.gpaheader {
+  position: relative;
+  top: 20px
+  margin:auto;
+  height: 220px;
   background: -webkit-linear-gradient(#9470B8, #639); 
   background: -o-linear-gradient(#9470B8, #639); 
   background: -moz-linear-gradient(#9470B8, #639); 
@@ -112,6 +125,7 @@ position:relative;
 }
 
 #button2 {
+  z-index: 2;
    position:relative;
   bottom: 100px;
    margin:auto;
