--- a/views/content.erb
+++ b/views/content.erb
@@ -9,7 +9,7 @@
   <link href='http://fonts.googleapis.com/css?family=Raleway+Dots' rel='stylesheet' type='text/css'>
  <body>
     <img src= "https://31.media.tumblr.com/e23c21e232cfb664a93cc0f614831366/tumblr_nsctbgJIlG1ua26pjo4_540.gif" height = "200px" width = "200px">
-<a href="/"><img id = "er" src = "https://38.media.tumblr.com/865ec1428a09ca620030eff4ea84c1a5/tumblr_nsctbgJIlG1ua26pjo1_540.gif" height = "275px" width = "275px"></a>
+  <a href="/"><img id = "er" src = "https://38.media.tumblr.com/865ec1428a09ca620030eff4ea84c1a5/tumblr_nsctbgJIlG1ua26pjo1_540.gif" height = "275px" width = "275px"></a>
    <img src = "https://38.media.tumblr.com/0c9790cc6bc01121e3016ae1de2cb286/tumblr_nsctbgJIlG1ua26pjo5_540.gif" height = "200px" width = "200px">
     <div class = "header">
       <h1 id = "plannerhead"><br>&nbsp &nbspPlanner <img id = "planner" src = "https://38.media.tumblr.com/dd4c97a4b39e658542665dc4e985357c/tumblr_nsctbgJIlG1ua26pjo2_540.gif" height = "125px" width = "125px"></h1> 
@@ -20,8 +20,15 @@
       <h1 id = "erhead"><br>&nbsp &nbspEducational Resources <img id = "er" src = "https://38.media.tumblr.com/9198b89eff02e1f72a23804594597862/tumblr_nsctbgJIlG1ua26pjo3_540.gif" height = "125px" width = "125px"></h1>
    <p id = "ertext">&nbsp &nbsp&nbsp&nbsp&nbsp &nbspThe World Wide Web is full of resources and a few searches in google can lead you to some excellent websites!<br>&nbsp &nbsp&nbsp&nbsp&nbsp &nbspUnfortunately, they can also lead you astray, so that's what we're here for!  ER provides all the best educational sources you<br>&nbsp &nbsp&nbsp&nbsp&nbsp &nbspneed to ace that exam or just simply learn more about something that interests you!</p>
         <a href="/er"  id="button2"><br><p id = "buttontext">Join us</p></a>   
+      </div>
+   <br>
+    <div class = "gpaheader">
+      <h1 id = "plannerhead"><br>&nbsp &nbspGPA Calculator <img id = "planner" src = "https://31.media.tumblr.com/1a9a44e16505ab4d2fb38d0456afae3e/tumblr_nsctbgJIlG1ua26pjo6_r1_540.gif" height = "125px" width = "125px"></h1> 
+   <p id = "plannertext"> &nbsp &nbsp&nbsp&nbsp&nbsp &nbspAm I good enough for colleges?  Find out now with your GPA calculator!  No pressure, it's only the rest of your life. :-)</p> 
+   <a href="/gpa.erb"  id="button1"><br><p id = "buttontext">Join us</p></a> 
+   </div>
       
-  </div>
+ 
    
  
  </body>
