--- a/views/gpa.erb
+++ b/views/gpa.erb
@@ -1,16 +1,25 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
  <head>
-  <meta charset="UTF-8">
-  <title>GPA Calculator</title>
+   <meta charset="UTF-8">
+    <title>GPA Calculator</title>
+  <link href='http://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
+ <link href='http://fonts.googleapis.com/css?family=Raleway+Dots' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="style/css" href="css/style3.css">
  </head>
  <body>
+   <center><img src= "https://31.media.tumblr.com/e23c21e232cfb664a93cc0f614831366/tumblr_nsctbgJIlG1ua26pjo4_540.gif" height = "150px" width = "150px">
+   <a href="/"><img id = "er" src = "https://38.media.tumblr.com/865ec1428a09ca620030eff4ea84c1a5/tumblr_nsctbgJIlG1ua26pjo1_540.gif" height = "200px" width = "200px"></a>
+   <img src = "https://38.media.tumblr.com/0c9790cc6bc01121e3016ae1de2cb286/tumblr_nsctbgJIlG1ua26pjo5_540.gif" height = "150px" width = "150px"></center>
+   <br>
    <h1>GPA Calculator</h1>
+   <div id="grades">
    <h2>A = 4.00&nbsp&nbsp  A- = 3.67&nbsp&nbsp  B+ = 3.33&nbsp&nbsp  B = 3.00</h2>
    <h2>B- = 2.67&nbsp&nbsp  C+ = 2.33&nbsp&nbsp  C = 2.00&nbsp&nbsp  C- = 1.67</h2>
    <h2>D+ = 1.33&nbsp&nbsp  D = 1.00&nbsp&nbsp  D- = 0.67&nbsp&nbsp  F = 0.000</h2>
+   </div>
   <table border = "1">
-    <form method = 'POST' action= '/results'>
+    <form method = 'POST' action= '/results2'>
     <tr>
       <th>Course</th>
       <th>Credit Hours</th>
