--- a/views/index.erb
+++ b/views/index.erb
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>School App</title>
 </head>
+<!--   <link rel="shortcut icon" type="https://40.media.tumblr.com/28984f903036d5cda0ef11a752bcea9c/tumblr_nsctbgJIlG1ua26pjo7_r1_75sq.png" href="/favicon.png"/>
+<link rel="shortcut icon" type="https://40.media.tumblr.com/28984f903036d5cda0ef11a752bcea9c/tumblr_nsctbgJIlG1ua26pjo7_r1_75sq.png" href="http://eg.com/favicon.png"/> -->
+  
   <link rel="stylesheet" type="style/css" href="css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Raleway+Dots' rel='stylesheet' type='text/css'>
