--- a/views/planner.erb
+++ b/views/planner.erb
@@ -8,9 +8,9 @@
  </head><link href='http://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Raleway+Dots' rel='stylesheet' type='text/css'>
  <body>
-    <img src= "https://31.media.tumblr.com/e23c21e232cfb664a93cc0f614831366/tumblr_nsctbgJIlG1ua26pjo4_540.gif" height = "150px" width = "150px">
+    <center><img src= "https://31.media.tumblr.com/e23c21e232cfb664a93cc0f614831366/tumblr_nsctbgJIlG1ua26pjo4_540.gif" height = "150px" width = "150px">
    <a href="/"><img id = "er" src = "https://38.media.tumblr.com/865ec1428a09ca620030eff4ea84c1a5/tumblr_nsctbgJIlG1ua26pjo1_540.gif" height = "200px" width = "200px"></a>
-   <img src = "https://38.media.tumblr.com/0c9790cc6bc01121e3016ae1de2cb286/tumblr_nsctbgJIlG1ua26pjo5_540.gif" height = "150px" width = "150px">
+   <img src = "https://38.media.tumblr.com/0c9790cc6bc01121e3016ae1de2cb286/tumblr_nsctbgJIlG1ua26pjo5_540.gif" height = "150px" width = "150px"></center>
    <h1 id= planner_page>Planner</h1>
    <table style="margin: auto;" background-color: #9470B8; color: #639>
      <tr>
@@ -47,6 +47,7 @@
    </table>
      <br>
      <br>
+     <p>Please enter both a wake-up and sleep time.</p>
      <p>At which hour do you want to go to sleep? No later than 1 :-). Response should be in the format: t22 for 10 pm and t2 for 2 am.</p>
      <input type='text' name='sleep'>
      <br>
