--- a/views/er.erb
+++ b/views/er.erb
@@ -4,27 +4,30 @@
   <meta charset="UTF-8">
    <title>Educational Resources</title>
    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-   <link href='http://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
+   <link href='htatp://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
+   <link href='http://fonts.googleapis.com/css?family=Raleway+Dots' rel='stylesheet' type='text/css'>
      <link rel="stylesheet" type="text/css" href="css/style2.css" >
  </head>
  <body>
-  <div container>
+
     <center><img src= "https://31.media.tumblr.com/e23c21e232cfb664a93cc0f614831366/tumblr_nsctbgJIlG1ua26pjo4_540.gif" height = "100px" width = "100px">
    <a href="/"><img id = "er" src = "https://38.media.tumblr.com/865ec1428a09ca620030eff4ea84c1a5/tumblr_nsctbgJIlG1ua26pjo1_540.gif" height = "150px" width = "150px"></a>
    <img src = "https://38.media.tumblr.com/0c9790cc6bc01121e3016ae1de2cb286/tumblr_nsctbgJIlG1ua26pjo5_540.gif" height = "100px" width = "100px"></center>
     <br>
+     <div container>
    <ul class="nav nav-pills" id = "navbar">
-  <li role="presentation" class="active"><a href="index.erb">Home</a></li>
+  <li role="presentation" class="active"><a href="er">Home</a></li>
   <li role="presentation"><a href="math.erb">Math</a></li>
   <li role="presentation"><a href="english.erb">English</a></li>
   <li role="presentation"><a href="history.erb">History</a></li>
   <li role="presentation"><a href="science.erb">Science</a></li>
   <li role="presentation"><a href="language.erb">Language</a></li>
-     <form method = "POST" action = "/results.erb" id = "search"> <input type = "text" name = "search"> </input> <input type = "submit"> </input> </form> 
-</ul>
-</ul>
+     <form method = "POST" action = "/results.erb"> <input type = "text" name = "search"> </input> <input type = "submit"> </input> </form> 
+</ul> 
+  
 <div id = "header"> 
-   <h1> <br> &nbsp Educational Resources </h1>
+  <br><br>
+<h1> <br> &nbsp Educational Resources </h1>
    <h3> This website contains videos, links, textbooks, and everything you'll need for school research </h3>
 </div>
 </div>
