--- a/views/geometry.erb
+++ b/views/geometry.erb
@@ -9,9 +9,12 @@
      <link rel="stylesheet" type="text/css" href="css/style2.css" >
  </head>
  <body>
+   <center><img src= "https://31.media.tumblr.com/e23c21e232cfb664a93cc0f614831366/tumblr_nsctbgJIlG1ua26pjo4_540.gif" height = "150px" width = "150px">
+   <a href="/"><img id = "er" src = "https://38.media.tumblr.com/865ec1428a09ca620030eff4ea84c1a5/tumblr_nsctbgJIlG1ua26pjo1_540.gif" height = "200px" width = "200px"></a>
+   <img src = "https://38.media.tumblr.com/0c9790cc6bc01121e3016ae1de2cb286/tumblr_nsctbgJIlG1ua26pjo5_540.gif" height = "150px" width = "150px"></center>
    <div container>
    <ul class="nav nav-pills">
-  <li role="presentation" class="active"><a href="er.erb">Home</a></li>
+  <li role="presentation" class="active"><a href="er">Home</a></li>
   <li role="presentation"><a href="math.erb">Math</a></li>
   <li role="presentation"><a href="english.erb">English</a></li>
   <li role="presentation"><a href="history.erb">History</a></li>
