--- a/views/results2.erb
+++ b/views/results2.erb
@@ -1,12 +1,14 @@
-
 <!DOCTYPE html>
 <html>
  <head>
-  <meta charset="UTF-8">
+     <meta charset="UTF-8">
   <title>Results</title>
+   <link href='http://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
+ <link href='http://fonts.googleapis.com/css?family=Raleway+Dots' rel='stylesheet' type='text/css'>
+   <link rel="stylesheet" type="style/css" href="css/style3.css">
  </head>
  <body>
    <h1>Here is the result:</h1>
-   <h2><%= @gpa %></h2>
+   <h2 id="gpa"><%= @gpa %></h2>
  </body>
 </html>
