--- a/views/content.erb
+++ b/views/content.erb
@@ -2,11 +2,11 @@
 <html>
  <head>
     <link rel="stylesheet" type="style/css" href="css/style.css">
-   <link rel="stylesheet" href="http://maxcdn.bootstrap.cdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+   <link rel="stylesheet" href="https://maxcdn.bootstrap.cdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <meta charset="UTF-8">
   <title>School App</title>
- </head><link href='http://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Raleway+Dots' rel='stylesheet' type='text/css'>
+ </head><link href='https://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Raleway+Dots' rel='stylesheet' type='text/css'>
  <body>
     <img src= "https://31.media.tumblr.com/e23c21e232cfb664a93cc0f614831366/tumblr_nsctbgJIlG1ua26pjo4_540.gif" height = "200px" width = "200px">
   <a href="/"><img id = "er" src = "https://38.media.tumblr.com/865ec1428a09ca620030eff4ea84c1a5/tumblr_nsctbgJIlG1ua26pjo1_540.gif" height = "275px" width = "275px"></a>
