--- a/views/index.erb
+++ b/views/index.erb
@@ -8,8 +8,8 @@
 <link rel="shortcut icon" type="https://40.media.tumblr.com/28984f903036d5cda0ef11a752bcea9c/tumblr_nsctbgJIlG1ua26pjo7_r1_75sq.png" href="http://eg.com/favicon.png"/> -->
   
   <link rel="stylesheet" type="style/css" href="css/style.css">
-  <link href='http://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Raleway+Dots' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Raleway+Dots' rel='stylesheet' type='text/css'>
  <body>
    <br>
    <br>
@@ -18,9 +18,9 @@
    <br>
    <br>
    
-    <center><img src= "https://31.media.tumblr.com/e23c21e232cfb664a93cc0f614831366/tumblr_nsctbgJIlG1ua26pjo4_540.gif" height = "500px" width = "500px">
-  <a href="/content"><img src = "https://38.media.tumblr.com/865ec1428a09ca620030eff4ea84c1a5/tumblr_nsctbgJIlG1ua26pjo1_540.gif" height = "500px" width = "500px"></a>
-  <img src = "https://38.media.tumblr.com/0c9790cc6bc01121e3016ae1de2cb286/tumblr_nsctbgJIlG1ua26pjo5_540.gif" height = "500px" width = "500px"></center>
+    <center><img src= "https://31.media.tumblr.com/e23c21e232cfb664a93cc0f614831366/tumblr_nsctbgJIlG1ua26pjo4_540.gif" height = "450px" width = "450px">
+  <a href="/content"><img src = "https://38.media.tumblr.com/865ec1428a09ca620030eff4ea84c1a5/tumblr_nsctbgJIlG1ua26pjo1_540.gif" height = "450px" width = "450px"></a>
+  <img src = "https://38.media.tumblr.com/0c9790cc6bc01121e3016ae1de2cb286/tumblr_nsctbgJIlG1ua26pjo5_540.gif" height = "450px" width = "450px"></center>
    <br>
    <br>
    
