--- a/views/results.erb
+++ b/views/results.erb
@@ -4,8 +4,8 @@ Results HTML (results.erb)
  <head>
   <meta charset="UTF-8">
   <title>Educational Resources</title>
-<link href='http://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
-   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link href='https://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
    <link rel="stylesheet" type="text/css" href="css/style2.css" >
  </head>
  <body>
