--- a/views/chemistry.erb
+++ b/views/chemistry.erb
@@ -3,8 +3,8 @@
  <head>
   <meta charset="UTF-8">
   <title>Educational Resources</title>
-   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-   <link href='http://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+   <link href='https://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
      <link rel="stylesheet" type="text/css" href="css/style2.css" >
  </head>
  <body>
