--- a/views/gpa.erb
+++ b/views/gpa.erb
@@ -3,8 +3,8 @@
  <head>
    <meta charset="UTF-8">
     <title>GPA Calculator</title>
-  <link href='http://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
- <link href='http://fonts.googleapis.com/css?family=Raleway+Dots' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
+ <link href='https://fonts.googleapis.com/css?family=Raleway+Dots' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="style/css" href="css/style3.css">
  </head>
  <body>
