--- a/views/content.erb
+++ b/views/content.erb
@@ -13,18 +13,18 @@
    <img src = "https://38.media.tumblr.com/0c9790cc6bc01121e3016ae1de2cb286/tumblr_nsctbgJIlG1ua26pjo5_540.gif" height = "200px" width = "200px">
     <div class = "header">
       <h1 id = "plannerhead"><br>&nbsp &nbspPlanner <img id = "planner" src = "https://38.media.tumblr.com/dd4c97a4b39e658542665dc4e985357c/tumblr_nsctbgJIlG1ua26pjo2_540.gif" height = "125px" width = "125px"></h1> 
-   <p id = "plannertext"> &nbsp &nbsp&nbsp&nbsp&nbsp &nbspThere are 24 hours in a day. There's so much to do, and so little time to spare.<br> &nbsp &nbsp&nbsp&nbsp&nbsp &nbspSometimes we just need a helping hand. That's what we're here for.<br>&nbsp &nbsp&nbsp&nbsp&nbsp &nbspSo "Join us", and discover a whole new way to plan your life.  Simply enter your <br>&nbsp &nbsp&nbsp&nbsp&nbsp &nbspactivites for the day and we'll generate a schedule that's right for you!</p> 
+   <p id = "plannertext"> &nbsp &nbsp&nbsp&nbsp&nbsp &nbspThere are 24 hours in a day. There's so much to do, and so little time to spare.  Sometimes we just need<br> &nbsp &nbsp&nbsp&nbsp&nbsp &nbspa helping hand. That's what we're here for.&nbsp&nbspSo "Join us", and discover a whole new way to plan your <br>&nbsp &nbsp&nbsp&nbsp&nbsp &nbsplife.  Simply enter your activites for the day and we'll generate a schedule that's right for you!</p> 
    <a href="/planner"  id="button1"><br><p id = "buttontext">Join us</p></a> 
    </div>
    <div class = "er_header">
       <h1 id = "erhead"><br>&nbsp &nbspEducational Resources <img id = "er" src = "https://38.media.tumblr.com/9198b89eff02e1f72a23804594597862/tumblr_nsctbgJIlG1ua26pjo3_540.gif" height = "125px" width = "125px"></h1>
-   <p id = "ertext">&nbsp &nbsp&nbsp&nbsp&nbsp &nbspThe World Wide Web is full of resources and a few searches in google can<br>&nbsp &nbsp&nbsp&nbsp&nbsp &nbsplead you to some excellent websites! Unfortunately, they can also lead you <br>&nbsp &nbsp&nbsp&nbsp&nbsp &nbspastray, so that's what we're here for!  ER provides all the best educational<br>&nbsp &nbsp&nbsp&nbsp&nbsp &nbspsources you need to ace that exam or just simply learn more about something<br>&nbsp &nbsp&nbsp&nbsp&nbsp &nbsp that interests you!</p>
+   <p id = "ertext">&nbsp &nbsp&nbsp&nbsp&nbsp &nbspThe World Wide Web is full of resources and a few searches in google can lead you to some excellent <br>&nbsp &nbsp&nbsp&nbsp&nbsp &nbspwebsites! Unfortunately, they can also lead you astray, so that's what we're here for!  ER provides all the <br>&nbsp &nbsp&nbsp&nbsp&nbsp &nbspbest educational sources you need to ace that exam or just simply learn more about something that <br>&nbsp &nbsp&nbsp&nbsp&nbsp &nbspinterests you!</p>
         <a href="/er"  id="button2"><br><p id = "buttontext">Join us</p></a>   
       </div>
    <br>
     <div class = "gpaheader">
       <h1 id = "plannerhead"><br>&nbsp &nbspGPA Calculator <img id = "planner" src = "https://31.media.tumblr.com/1a9a44e16505ab4d2fb38d0456afae3e/tumblr_nsctbgJIlG1ua26pjo6_r1_540.gif" height = "125px" width = "125px"></h1> 
-   <p id = "plannertext"> &nbsp &nbsp&nbsp&nbsp&nbsp &nbspAm I good enough for colleges?  Find out now with your GPA calculator!<br>&nbsp &nbsp&nbsp&nbsp&nbsp &nbspNo pressure, it's only the rest of your life. :-)</p> 
+   <p id = "plannertext"> &nbsp &nbsp&nbsp&nbsp&nbsp &nbspAm I good enough for colleges?  Find out now with your GPA calculator!  No pressure, it's only the <br>&nbsp &nbsp&nbsp&nbsp&nbsp &nbsprest of your life. :-)</p> 
    <a href="/gpa.erb"  id="button3"><br><p id = "buttontext">Join us</p></a> 
    </div>
       
